Fixed lint warnings